finish home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,57 @@
 		<div class="brand-des">
 			<img src="img/brand.jpg" alt="">
 		</div>
+		<div class="wrap">
+			<ul class="lineBox">
+				<li>
+					<div class="boxWrapper homepage">
+						<a href="">
+							<img class="fr" src="img/home_1.jpg" alt="">
+							<div class="fl f12 mt50 tc">
+								<p>2013</p>
+								<p>NEW ARIVAL</p>
+							</div>
+						</a>
+					</div>
+				</li>
+				<li>
+					<div class="boxWrapper homepage">
+						<a href="">
+							<img class="fl" src="img/home_2.jpg" alt="">
+							<div class="fr f12 mt50 tc">
+								<p>2013</p>
+								<p>AUTUMN</p>
+							</div>
+						</a>
+					</div>
+				</li>
+				<li>
+					<div class="boxWrapper homepage">
+						<a href="">
+							<img class="fr" src="img/home_3.jpg" alt="">
+							<div class="fl f12 mt50 tc">
+								<p>2013</p>
+								<p>PRODUCTS</p>
+							</div>
+						</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 	</div>
-	<footer></footer>
+	<footer>
+		<ul class="footer-nav f12">
+			<li class="footer-item tc fb">
+				<a href="">Home</a>
+			</li>
+			<li class="footer-item tc fb">
+				<a href="">VIP</a>
+			</li>
+			<li class="footer-item tc">
+				<a href="">Cart</a>
+			</li>
+		</ul>
+		<p class="f12 tc">© 2013 - WEAZM</p>
+	</footer>
 </body>
 </html>
