add basic interaction using jQuery

--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
 	<div class="main cart">
 		<div class="wrap pt20">
 			<ul class="lineBox">
-				<li>
+				<li class="cartPro">
 					<div class="boxWrapper">
 						<img src="img/all-3.jpg" alt="">
 						<div class="cartDes">
@@ -34,7 +34,7 @@
 							<span class="cartSinglePri">$298.00</span>
 						</div>
 				</li>
-				<li>
+				<li class="cartPro">
 					<div class="boxWrapper">
 						<img src="img/all-4.jpg" alt="">
 					<div class="cartDes">
@@ -49,7 +49,7 @@
 							<span class="cartSinglePri">$298.00</span>
 						</div>
 				</li>
-				<li>
+				<li class="cartPro">
 					<div class="boxWrapper">
 						<img src="img/all-5.jpg" alt="">
 					<div class="cartDes">
@@ -91,5 +91,15 @@
 		</ul>
 		<p class="f12 tc">© 2013 - WEAZM</p>
 	</footer>
+	<script src="js/jquery.min.js"></script>
+	<script>
+		$(function(){
+			$('button.delete').click(function(){
+				$(this).parents(".cartPro").slideUp();
+				// console.log('success');
+
+			});
+		})
+	</script>
 </body>
 </html>
